--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
       <div class="overlay"></div>
     </div>
     
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
